Mon Apr 25 11:27:27 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* doc/extension.rdoc: Improvements to english grammers.
	  [Bug #12246][ruby-core:74792][ci skip]

Mon Apr 25 11:17:50 2016  Marcus Stollsteimer  <sto.mar@web.de>

	* encoding.c: Fix return value of `Encoding::ISO8859_1.name`
	  [Bug #12313][ruby-core:75147][ci skip]
	* ext/bigdecimal/bigdecimal.c: Fix code sample of `BigDecimal.new`

Sun Apr 24 23:29:16 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: add missing -lm for AIX.

Sun Apr 24 18:33:58 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_insnhelper.c (INLINE): disable r54738 if __NO_INLINE__ is defined.
	  It caused "undefined reference to `vm_getivar'".

Sun Apr 24 09:32:12 2016  Yuichiro Kaneko  <yui-knk@ruby-lang.org>

	* test/ruby/test_array.rb: Add test cases for Array#sum with
	  non-numeric objects.

Sun Apr 24 04:21:27 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_insnhelper.c (INLINE): define as `inline` when it is optimized.
	  define as `static inline` when it is not optimized to keep
	  the symbol generated.

	* vm_insnhelper.c (vm_getivar): use `INLINE` to force inline
	  so that a compiler inlines it into vm_getinstancevariable
	  and optimizes out is_attr and related branches.

	* vm_insnhelper.c (vm_getivar): use `inline` to recommend inline.
	  Without this vm1_ivar_set is degraded.

	  benchmark results:
	  minimum results in each 5 measurements.
	  Execution time (sec)
	  name    ruby 2.4.0dev (2016-04-23 trunk 54727) [x86_64-linux]   ruby 2.4.0dev (2016-04-23 trunk 54733) [x86_64-linux]       built-ruby
	  loop_whileloop 0.641                                                   0.642 0.646
	  vm1_ivar* 1.002                                                   0.999 0.831
	  vm1_ivar_set* 0.369                                                   1.106 0.362

	  Speedup ratio: compare with the result of `ruby 2.4.0dev (2016-04-23
	  trunk 54727) [x86_64-linux]' (greater is better)